--- a/Textures/ICON_UNIT_AL_FUMI_GREATNORMAL_50.tex
+++ b/Textures/ICON_UNIT_AL_FUMI_GREATNORMAL_50.tex
@@ -32,7 +32,7 @@
 	<m_Width>50</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\DT\lilyimages\unit\ICON_UNIT_AL_FUMI_GREATNORMAL_50.png"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_UNIT_AL_FUMI_GREATNORMAL_50.png"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>892737934</m_ExportedTime>
