--- a/Textures/ICON_GREAT_PERSON_INDIVIDUAL_AL_LILY_FUMI_PORTRAIT_95.tex
+++ b/Textures/ICON_GREAT_PERSON_INDIVIDUAL_AL_LILY_FUMI_PORTRAIT_95.tex
@@ -32,7 +32,7 @@
 	<m_Width>95</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\DT\lilyimages\gpportrait\ICON_GREAT_PERSON_INDIVIDUAL_AL_LILY_FUMI_PORTRAIT_95.dds"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_GREAT_PERSON_INDIVIDUAL_AL_LILY_FUMI_PORTRAIT_95.dds"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>2341058886</m_ExportedTime>
