--- a/Textures/ICON_LEADER_AL_RIRI_LOADFORGE_.tex
+++ b/Textures/ICON_LEADER_AL_RIRI_LOADFORGE_.tex
@@ -32,7 +32,7 @@
 	<m_Width>512</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\1\Firaxis ModBuddy\Civilization VI\Assault Lily\Assault Lily\Textures\ICON_LEADER_AL_RIRI_LOADFORGE_.dds"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_LEADER_AL_RIRI_LOADFORGE_.dds"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>273120375</m_ExportedTime>
