--- a/Textures/ICON_UNIT_AL_GREAT_PERSON_FUMI_80.tex
+++ b/Textures/ICON_UNIT_AL_GREAT_PERSON_FUMI_80.tex
@@ -32,7 +32,7 @@
 	<m_Width>80</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\DT\lilyimages\gpportrait\ICON_UNIT_AL_GREAT_PERSON_FUMI_80.png"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_UNIT_AL_GREAT_PERSON_FUMI_80.png"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>2635170766</m_ExportedTime>
