--- a/Textures/ICON_UNIT_ROSE_PORTRAIT_70.tex
+++ b/Textures/ICON_UNIT_ROSE_PORTRAIT_70.tex
@@ -32,7 +32,7 @@
 	<m_Width>70</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\1\Firaxis ModBuddy\Civilization VI\Assault Lily\Assault Lily\Textures\ICON_UNIT_ROSE_PORTRAIT_70.dds"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_UNIT_ROSE_PORTRAIT_70.dds"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>274407292</m_ExportedTime>
