--- a/Textures/ICON_CIVILIZATION_YURIGAOKA_64.tex
+++ b/Textures/ICON_CIVILIZATION_YURIGAOKA_64.tex
@@ -32,7 +32,7 @@
 	<m_Width>64</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\1\Firaxis ModBuddy\Civilization VI\Assault Lily\Assault Lily\Textures\ICON_CIVILIZATION_YURIGAOKA_64.dds"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_CIVILIZATION_YURIGAOKA_64.dds"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>270344131</m_ExportedTime>
