--- a/Textures/ICON_DISTRICT_AL_MOYU_22.tex
+++ b/Textures/ICON_DISTRICT_AL_MOYU_22.tex
@@ -32,7 +32,7 @@
 	<m_Width>22</m_Width>
 	<m_Depth>1</m_Depth>
 	<m_NumMipMaps>0</m_NumMipMaps>
-	<m_SourceFilePath text="F:\1\Firaxis ModBuddy\Civilization VI\Assault Lily\Assault Lily\Textures\ICON_DISTRICT_AL_MOYU_22.dds"/>
+	<m_SourceFilePath text="//civ6/main/AssaultLily_In_Civilization6\Textures\ICON_DISTRICT_AL_MOYU_22.dds"/>
 	<m_SourceObjectName text=""/>
 	<m_ImportedTime>0</m_ImportedTime>
 	<m_ExportedTime>270434152</m_ExportedTime>
